osd: ignore bad_peer when found in ok_peers

When repairing an object, ignore bad_peer when it is found in the
ok_peers and issue an error message.

http://tracker.ceph.com/issues/10524 Refs: #10524

Signed-off-by: Loic Dachary <ldachary@redhat.com>